changement de la page, projet, ajout des variables css dans les sections projets et contact, correction du footer peu visible en sur Mobile

--- a/css/layout/footer.css
+++ b/css/layout/footer.css
@@ -86,3 +86,11 @@ footer {
         display: none;
     }
 }
+@media (max-width:425px) {
+    .green-button-footer{
+        display: none;
+    }
+    footer{
+        padding-bottom: 1.5rem;
+    }
+}
