--- a/css/section-home/contact.css
+++ b/css/section-home/contact.css
@@ -8,7 +8,7 @@
     font-size: 2rem;
     margin: 2em 0;
     font-weight: 500;
-    color: rgb(0, 0, 0);
+    color: var(--text-color2);
     text-transform: uppercase;
     text-align: center;
 }
@@ -23,7 +23,7 @@
 .network div {
     display: flex;
     flex-direction: column;
-    color: rgb(255, 255, 255);
+    color: var(--text-color);
 }
 
 .network div i {
@@ -31,7 +31,7 @@
     width: 105px;
     height: 105px;
     background-color: var(--bg-color4);
-    box-shadow: 5px 5px rgb(255, 0, 0);
+    box-shadow: 5px 5px var(--accent-red);
     border-radius: var(--radius);
     font-size: 3.5rem;
     text-align: center;
@@ -46,7 +46,7 @@
 
 .network div i:hover {
     transform: scale(1.13) rotate(-6deg);
-    box-shadow: 10px 10px 0 rgb(255, 0, 0), 0 4px 30px #0003;
+    box-shadow: 10px 10px 0 var(--accent-red), 0 4px 30px #0003;
 }
 
 .network div a {
@@ -55,7 +55,7 @@
     font-size: 1rem;
     font-style: italic;
     text-transform: uppercase;
-    color: rgb(255, 0, 0);
+    color: var(--accent-red);
     padding: 15px;
     transition: 0.5s ease-in-out;
     text-align: center;
@@ -66,7 +66,7 @@
 } */
 
 .network div a:hover {
-    color: rgb(0, 0, 0);
+    color: var(--text-color2);
 }
 
 .CV {
@@ -81,7 +81,7 @@
     font-size: 1rem;
     font-style: italic;
     font-family: "Inter", sans-serif;
-    color: rgb(0, 0, 0);
+    color: var(--text-color2);
     padding: 20px;
     margin: 0 5rem;
     text-transform: uppercase;
@@ -93,8 +93,8 @@
     padding: 20px 50px;
     font-family: var(--fontMono);
     background-color: transparent;
-    color: rgb(255, 0, 0);
-    border: 2px dashed rgb(255, 0, 0);
+    color: var(--accent-red);
+    border: 2px dashed var(--accent-red);
     border-radius: var(--radius);
     transition: all 0.5s ease-in-out;
     cursor: pointer;
@@ -107,7 +107,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: rgb(255, 0, 0);
+    background: var(--accent-red);
     z-index: -2;
     transition: 0.5s;
 }
